--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,2 +1,10 @@
 <h1>Home#top</h1>
 <p>Find me in app/views/home/top.html.erb</p>
+
+<div class="">
+  <div class="">
+    <div class="">
+
+    </div>
+  </div>
+</div>
