--- a/app/views/quest/show.html.erb
+++ b/app/views/quest/show.html.erb
@@ -3,7 +3,8 @@ Quest#show
 <div class="">
   <div class="">
     <div class="">
-
+      <%= @quest.content %>
+      <%= @quest.created_at %>
     </div>
   </div>
 </div>
