16 - quests#new,#create 新規クエスト投稿機能作成

--- a/app/views/quests/index.html.erb
+++ b/app/views/quests/index.html.erb
@@ -4,7 +4,7 @@
 <div class="">
   <div class="">
     <% @quests.each do |quest| %>
-    <%= link_to(quest.content,"/quest/#{quest.id}") %>
+    <%= link_to(quest.content,"/quests/#{quest.id}") %>
     <% end %>
   </div>
 </div>
