--- a/app/views/quests/new.html.erb
+++ b/app/views/quests/new.html.erb
@@ -2,8 +2,10 @@ Quest#new
 
 <div class="">
   <div class="">
-    <div class="">
-
-    </div>
+    <div class="">投稿する</div>
+    <%= form_tag("/quests/create") do %>
+    <textarea name="content" id="" cols="30" rows="10"></textarea>
+    <input type="submit" value="投稿">
+    <% end %>
   </div>
 </div>
