--- a/app/views/quests/edit.html.erb
+++ b/app/views/quests/edit.html.erb
@@ -4,6 +4,9 @@ Quests#edit
   <div class="">
     <div class="">更新する</div>
     <%= form_tag("/quests/#{@quest.id}/update") do %>
+    <% @quest.errors.full_messages.each do |message| %>
+    <%= message %>
+    <% end %>
     <textarea name="content" id="" cols="30" rows="10"><%= @quest.content %></textarea>
     <input type="submit" value="保存">
     <% end %>
