22 - users#index,show ユーザー一覧ページ/詳細ページ/リンクの作成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+    <li><%= link_to("ユーザー一覧", "/users/index", class:"link") %></li>
+    <li><%= link_to("クエスト作成", "/quests/new", class:"link") %></li>
+    <li><%= link_to("クエスト一覧", "/quests/index", class:"link") %></li>
     <% if flash[:notice] %>
       <div class="flash">
         <%= flash[:notice] %>
