--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,10 @@
 <h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+
+<div class="">
+  <div class="">
+    <div class="">ユーザー一覧</div>
+    <% @users.each do |user| %>
+    <%= link_to(user.name, "/users/#{user.id}") %>
+    <% end %>
+  </div>
+</div>
