24② - ユーザーデータの保存について

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,11 +3,14 @@ Users#new
 <div class="">
   <div class="">
     <div class="">
+      <% @user.errors.full_messages.each do |message| %>
+      <%= message %>
+      <% end %>
       <%= form_tag("/users/create") do %>
       <p>ユーザー名</p>
-      <input type="" name="name">
+      <input type="" name="name" value="<%= @user.name %>">
       <p>メールアドレス</p>
-      <input type="" name="email">
+      <input type="" name="email" value="<%= @user.email %>">
       <input type="submit" value="新規登録">
       <% end %>
     </div>
