25 - users#edit,update ユーザー情報の編集/更新機能作成

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,8 @@ Users#show
 <div class="">
   <div class="">
     <div class="">
+      <%= @user.name %>
+      <%= link_to("編集", "/users/#{@user.id}/edit") %>
 
     </div>
   </div>
