26 - ユーザー初期画像設定

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,6 +4,7 @@
   <div class="">
     <div class="">ユーザー一覧</div>
     <% @users.each do |user| %>
+    <img src="<%= "/user_images/#{user.image_name}" %>" alt="">
     <%= link_to(user.name, "/users/#{user.id}") %>
     <% end %>
   </div>
