--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -6,12 +6,12 @@ Users#Login_form
       <% @user.errors.full_messages.each do |message| %>
       <%= message %>
       <% end %>
-      <%= form_tag("") do %>
+      <%= form_tag("/login") do %>
       <p>メールアドレス</p>
       <input type="" name="email" value="<%= @user.email %>">
       <p>パスワード</p>
       <input type="password" name="password" value="">
-      <input type="submit" value="新規登録">
+      <input type="submit" value="ログイン">
       <% end %>
     </div>
   </div>
