30 - users#login,login_form ログイン機能作成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
     <li><%= link_to("クエスト一覧", "/quests/index", class:"link") %></li>
     <li><%= link_to("新規登録", "/signup", class:"link") %></li>
     <li><%= link_to("ログイン", "/login", class:"link") %></li>
+    <li>UserID : <%= session[:user_id] %></li>
     <% if flash[:notice] %>
       <div class="flash">
         <%= flash[:notice] %>
