--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -11,6 +11,8 @@ Users#new
       <input type="" name="name" value="<%= @user.name %>">
       <p>メールアドレス</p>
       <input type="" name="email" value="<%= @user.email %>">
+      <p>パスワード</p>
+      <input type="password" name="password" value="<%= @user.password %>">
       <input type="submit" value="新規登録">
       <% end %>
     </div>
