35 - アクセス制限：ユーザー情報編集

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,8 +5,9 @@ Users#show
     <div class="">
       <img src="<%= "/user_images/#{@user.image_name}" %>" alt="">
       <%= @user.name %>
+      <% if @user.id == @current_user.id %>
       <%= link_to("編集", "/users/#{@user.id}/edit") %>
-
+      <% end %>
     </div>
   </div>
 </div>
