--- a/app/views/quests/show.html.erb
+++ b/app/views/quests/show.html.erb
@@ -22,5 +22,20 @@ Quest#show
       <% end %>
       <%= @Bookmarks_count %>
     </div>
+    <div>
+      <% @comments.each do |comment| %>
+    <div>
+      <strong><%= comment.user.user_name %></strong>
+      <br />
+      <p><%= comment.body %></p>
+      <% if user_signed_in? && comment.user == current_user %>
+        <p><%= link_to 'Delete', comment_path(comment), method: :delete %></p>
+      <% end %>
+    </div>
+      <% end %>
+      <% if @quest.user_id == @current_user.id %>
+      <%= render "comments/form" %>
+      <% end %>
+    </div>
   </div>
 </div>
