45② - (途中）コメント機能作成

--- a/app/views/quests/show.html.erb
+++ b/app/views/quests/show.html.erb
@@ -33,6 +33,9 @@ Quest#show
       <% end %>
     </div>
       <% end %>
+      <% if @quest.user_id == @current_user.id %>
+      <%= render  'comments/form' %>
+      <% end %>
     </div>
   </div>
 </div>
