45④ - （途中）コメント機能作成

--- a/app/views/quests/show.html.erb
+++ b/app/views/quests/show.html.erb
@@ -33,8 +33,8 @@ Quest#show
       <% end %>
     </div>
       <% end %>
-      <% if @quest.user_id == @current_user.id %>
-      <%= render  'comments/form' %>
+      <% if @current_user.id %>
+      <%= render 'comments/form' %>
       <% end %>
     </div>
   </div>
