--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_with(model:comment) do |form| %>
-  <% if comment.errors.any? %>
+<%= form_with(model:@comment) do |form| %>
+  <% if @comment.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
 
@@ -11,8 +11,8 @@
     </div>
   <% end %>
 
-  <%= f.hidden_field :user_id %>
-  <%= f.hidden_field :photo_id %>
+  <%= hidden_field_tag :user_id %>
+  <%= hidden_field_tag :quest_id %>
 
   <div class="field">
     <%= form.label :body %>
